Codigo  del DTO

--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PruebaPiche.Data.Entities.Student>
+﻿@model IEnumerable<PruebaPiche.DTO.StudentDTO>
 
 @{
     ViewData["Title"] = "Index";
